logs/scheduler/2023-03-12/gsc_to_bq.py.log
[2023-03-12T23:18:08.296+0000] {processor.py:153} INFO - Started process (PID=82) to work on /opt/airflow/dags/gsc_to_bq.py
[2023-03-12T23:18:08.302+0000] {processor.py:743} INFO - Processing file /opt/airflow/dags/gsc_to_bq.py for tasks to queue
[2023-03-12T23:18:08.322+0000] {logging_mixin.py:137} INFO - [2023-03-12T23:18:08.322+0000] {dagbag.py:538} INFO - Filling up the DagBag from /opt/airflow/dags/gsc_to_bq.py
[2023-03-12T23:18:08.525+0000] {logging_mixin.py:137} INFO - [2023-03-12T23:18:08.521+0000] {dagbag.py:343} ERROR - Failed to import: /opt/airflow/dags/gsc_to_bq.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 339, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/gsc_to_bq.py", line 1
    rom airflow import DAG
              ^
SyntaxError: invalid syntax
[2023-03-12T23:18:08.535+0000] {processor.py:755} WARNING - No viable dags retrieved from /opt/airflow/dags/gsc_to_bq.py
[2023-03-12T23:18:08.650+0000] {processor.py:175} INFO - Processing /opt/airflow/dags/gsc_to_bq.py took 0.378 seconds
